Add star wars planet note

--- a/src/template.html
+++ b/src/template.html
@@ -60,6 +60,7 @@
 
 
             </div>
+            <div class="weather-like">Current conditions most similar to: </div>
         </section>
         <div class="upcoming-container">
             This is where the upcoming 7 days weahter info will be
